--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-vite-ts-app",
+  "name": "client_app_oauth2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
